tests/ui/multiple_initialization.stderr
error[E0277]: the trait bound `MyStructBuilder<'_, '_, '_, {_: usize}, {_: bool}, false, true, String>: HasReq1` is not satisfied
  --> tests/ui/multiple_initialization.rs:25:10
   |
25 |         .build();
   |          ^^^^^ the trait `HasReq1` is not implemented for `MyStructBuilder<'_, '_, '_, {_: usize}, {_: bool}, false, true, String>`
   |
   = help: the trait `HasReq1` is implemented for `MyStructBuilder<'a, 'b, 'c, N, FLG, true, P1, T>`
note: required by a bound in `MyStructBuilder::<'a, 'b, 'c, N, FLG, P0, P1, T>::build`
  --> tests/ui/multiple_initialization.rs:1:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyStructBuilder::<'a, 'b, 'c, N, FLG, P0, P1, T>::build`
   = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
